2006-09-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/lily.scm (define-scheme-options): typo: add s, so it is 
	-dinclude-eps-fonts

2006-09-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/define-grobs.scm (all-grob-descriptions): oops, typo:
	use spanner::set-spacing-ronds

	* lily/note-column.cc: reformat.

	* lily/rest-collision.cc (calc_positioning_done): fix whole/half
	step positioning for note/rest combinations.

	* input/regression/rest-note-collision.ly: new file.

	* scm/define-grobs.scm (all-grob-descriptions): add
	springs-and-rods

	* flower/include/std-vector.hh: switch off again.

	* VERSION (PATCH_LEVEL): bump to 2.9.18

	* flower/include/std-string.hh: idem.

	* flower/include/std-vector.hh (_GLIBCXX_DEBUG): set if NDEBUG not set.

2006-09-15  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/engraver-init.ly: Make FiguredBass accepted in GrandStaff and
	PianoStaff. 

2006-09-08  Joe Neeman  <joeneeman@gmail.com>

	* Documentation/user/page.itely: update page breaking documentation

2006-09-07  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/note-collision.cc (calc_positioning_done): only access
	first head if available.

	* lily/tuplet-engraver.cc: add tupletFullLengthNote to description.

	* scm/framework-ps.scm (output-preview-framework): use new name.

	* lily/program-option.cc (internal_set_option): use new names.

	* Documentation/user/SConscript (lilypond_book_flags): update -d
	variable names.

	* Documentation/user/lilypond-book.itely (Inserting LilyPond
	output into other programs): new variable names.

	* scm/lily.scm (define-scheme-options): uniformize var names.

	* lily/tuplet-engraver.cc (listen_tuplet_span): verify that
	tuplets_ is non-empty before popping.

2006-09-07  Joe Neeman  <joeneeman@gmail.com>

	* lily/spanner.cc (find_broken_piece): 
	* lily/spacing-spanner.cc (get_columns): 
	* lily/source-file.cc (get_line): 
	* lily/simple-spacer.cc (get_column_description): 
	* lily/keyword.cc (lookup): 